added screenshot window on f12 press

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
 
   </head>
   <body>
+    <button id="click">click</button>
+    <img width="100%" src="" id="placeholder">
     <div id="root"></div>
   </body>
 </html>
